# svelte-go-demo

./: .gitignore  Cargo.toml  go.mod  pnpm-lock.yaml  vercel.json
api/: array.go  json.go  matrix.go  pi.go  sort.go
api/rust/: array.rs  json.rs  matrix.rs  pi.rs  sort.rs
src/routes/: +page.svelte
src/routes/array_js/: +server.ts
src/routes/js/array/: +server.ts
src/routes/js/json/: +server.ts
src/routes/js/matrix/: +server.ts
src/routes/js/sort/: +server.ts
src/routes/json_js/: +server.ts
src/routes/matrix_js/: +server.ts
src/routes/matrix_js copy/: +server.ts
src/routes/pi_js/: +server.ts
src/routes/sort_js/: +server.ts
