[package]
name = "svelte-go-rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1.0.2" }
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
reqwest = {version = "0.11.18", features = ["blocking"]}

# You can specify a library for shared logic here (optional)
# [lib]
# path = "src-rs/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "array"
path = "api/rust/array.rs"

[[bin]]
name = "pi"
path = "api/rust/pi.rs"

[[bin]]
name = "sort"
path = "api/rust/sort.rs"

[[bin]]
name = "matrix"
path = "api/rust/matrix.rs"

[[bin]]
name = "json"
path = "api/rust/json.rs"
